--- a/brief_dec.ipynb
+++ b/brief_dec.ipynb
@@ -70,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#google_key = \"AIzaSyAdtpwfsf9izYp3X67zPUaZdL0c1Ujy2k0\"\n",
+    "#google_key = \"my_api_key\"\n",
     "#geolocator = GoogleV3(api_key = google_key)\n",
     "\n",
     "#dict_geoloc = {}\n",
@@ -2348,7 +2348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.12 (default, Dec  8 2022, 11:38:07) \n[GCC 11.3.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
